--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,3 +141,34 @@ ul li {
 	cursor: pointer;
 	text-transform: uppercase;
 }
+
+
+.incoming-call-notice {
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    position: absolute;
+    top: 2rem;
+    z-index: 100;
+}
+.incoming-call-notice p {
+    margin-bottom: 1.5rem;
+}
+.incoming-call-notice button {
+    padding: 1rem 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+#accept-call {
+    background-color: #28a745; /* Green */
+    color: white;
+    border: none;
+}
+#decline-call {
+    background-color: #dc3545; /* Red */
+    color: white;
+    border: none;
+    margin-left: 1rem;
+}
